syntax = "proto3";
option  go_package = "github.com/flasherup/gradtage.de/daydegreesvc/ddgrpc";

package ddgrpc;

message Params {
    string  Station = 1;
    string  Start = 2;
    string  End = 3;
    string  Breakdown = 4;
    double  Tb = 5;
    double  Tr = 6;
    string  Method = 7;
    string  DayCalc = 8;
    int32   WeekStarts = 9;
}

message Degree {
    string Date = 1;
    double Temp = 2;
}

message GetDegreeRequest {
    Params params = 1;
}

message GetDegreeResponse {
    repeated Degree degrees = 1;
    string err = 2;
}

message GetAverageDegreeRequest {
    Params params = 1;
    int32 Years = 2;
}

message GetAverageDegreeResponse {
    repeated Degree degrees = 1;
    string err = 2;
}

service DayDegreeSVC {
    rpc GetDegree(GetDegreeRequest)  returns (GetDegreeResponse) {}
    rpc GetAverageDegree(GetAverageDegreeRequest)  returns (GetAverageDegreeResponse) {}
}


